--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  vertical-align: middle;
+  text-align: center;
+}
+
 main {
   /* Box Model */
   max-width: 25em;
