--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,9 @@ footer {
   padding: 0.5em;
   border-radius: 8px;
 }
+
+footer:hover {
+  background-color: #666;
+  border: 2px solid #666;
+  color: white;
+}
