--- a/css/main.css
+++ b/css/main.css
@@ -31,21 +31,20 @@ main {
   max-width: 25em;
 }
 
-footer {
+button {
   display: inline-block;
   text-align: left;
   max-width: 25em;
-  border: 2px solid black;
-  padding: 0.5em;
+  border: 2px solid #333;
+  padding: .5em;
   border-radius: 8px;
+  background-color: #eee9de;
+  font-family: 'Lato', sans-serif;
+  color: #333;
 }
 
-footer:hover {
+button:hover {
   background-color: #666;
   border: 2px solid #666;
   color: white;
-}
-
-.btn {
-
 }
