--- a/css/main.css
+++ b/css/main.css
@@ -36,11 +36,12 @@ button {
   text-align: left;
   max-width: 25em;
   border: 2px solid #333;
-  padding: .5em;
+  padding: 1em;
   border-radius: 8px;
   background-color: #eee9de;
   font-family: 'Lato', sans-serif;
   color: #333;
+  font-size: 1em;
 }
 
 button:hover {
