--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  display: inline-block;
+  display: flex;
   background-color: #eee9de;
   font-family: "Lato", sans-serif;
   line-height: 1.5;
