--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  display: flex;
   background-color: #eee9de;
   font-family: "Lato", sans-serif;
   line-height: 1.5;
@@ -12,7 +11,6 @@ html {
 }
 
 body {
-  box-sizing: border-box;
   min-height: 10em;
   max-width: 25em;
   vertical-align: middle;
@@ -26,14 +24,12 @@ img {
   max-width: 25em;
 }
 
-main {
-  display: inline-block;
+div {
   text-align: left;
   max-width: 25em;
 }
 
 button {
-  display: inline-block;
   text-align: left;
   max-width: 25em;
   border: 2px solid #333;
