--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html {
   font-family: "Lato", sans-serif;
   line-height: 1.5;
   color: #333;
+  display: inline-block;
 }
 
 *, *::before, *::after {
