--- a/css/main.css
+++ b/css/main.css
@@ -43,13 +43,12 @@ button:hover {
   max-width: 25em;
   text-align: center;
   width: 100%;
-  margin: 1.5rem;
+  padding: 1em;
 }
 
 .text {
   display: inline-block;
   max-width: 25em;
-  margin: 1.5rem;
   padding: 1em;
   width: 100%;
   text-align: left;
@@ -62,4 +61,9 @@ div {
 section {
   text-align: center;
   vertical-align: middle;
+}
+
+img {
+  width: 100%;
+  display: block;
 }
