--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #eee9de;
-  font-family: "Lato", sans-serif;
+  font-family: “Lato”, sans-serif;
   line-height: 1.5;
   color: #333;
   display: inline-block;
@@ -15,6 +15,7 @@ body {
   display: inline;
   padding: .4em .75em .5em;
   text-align: center;
+  margin: inherit;
 }
 
 .btn {
@@ -24,7 +25,7 @@ body {
   padding: .75em;
   border-radius: 8px;
   background-color: #eee9de;
-  font-family: "Lato", sans-serif;
+  font-family: “Lato”, sans-serif;
   color: #333;
   font-size: 1em;
 }
@@ -38,7 +39,6 @@ button:hover {
 .img {
   display: inline-block;
   max-width: 25em;
-  text-align: left;
   width: 100%;
   padding: 1em;
 }
@@ -61,6 +61,6 @@ section {
 }
 
 img {
-  width: 100%;
   display: block;
+  width: 100%;
 }
