--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #eee9de;
-  font-family: “Lato”, sans-serif;
+  font-family: "Lato", sans-serif;
   line-height: 1.5;
   color: #333;
   display: inline-block;
@@ -15,7 +15,6 @@ body {
   display: inline;
   padding: .4em .75em .5em;
   text-align: center;
-  margin: inherit;
 }
 
 .btn {
@@ -25,7 +24,7 @@ body {
   padding: .75em;
   border-radius: 8px;
   background-color: #eee9de;
-  font-family: “Lato”, sans-serif;
+  font-family: "Lato", sans-serif;
   color: #333;
   font-size: 1em;
 }
