--- a/css/main.css
+++ b/css/main.css
@@ -36,14 +36,12 @@ body {
 .img {
   display: inline-block;
   max-width: 25em;
-  width: 100%;
   padding: 1em;
 }
 
 .text {
   display: inline-block;
   max-width: 25em;
-  width: 100%;
   text-align: left;
   padding: 1em;
 }
@@ -63,5 +61,5 @@ img {
 }
 
 h2 {
-  margin: 0;
+  margin-top: 0;
 }
