--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,14 @@ body {
 .img {
   display: inline-block;
   max-width: 25em;
+  width: 100%;
   padding: 1em;
 }
 
 .text {
   display: inline-block;
   max-width: 25em;
+  width: 100%;
   text-align: left;
   padding: 1em;
 }
